# open-forest

./: .gitignore  .gitmodules  CMakeLists.txt  README.markdown  _CMakeLists.txt  build.sh  compile_it  leak-check  open-forest.sh  submodules  todo.markdown  todo.txt
cmake/: FindPlib.cmake
cmake/libs/alure/: CMakeLists.txt
cmake/libs/nanovg/: CMakeLists.txt
cmake/libs/tinyxml2/: CMakeLists.txt
cmake/libs/turbobadger/: CMakeLists.txt
cmake/libs/turbobadger/src/tb/: tb_image_loader_stb.cpp
data/: batb.xml
data/dynamic/: batb.xml  env.xml  env.yaml
data/dynamic/batb/: BATB.xml  BATB.yaml
data/dynamic/env/: Env.yaml
data/dynamic/open-forest/: BATB.yaml
data/meta/screenshots/: screenshots.markdown
data/old/: batbdb.xml
data/static/: ogre
data/static/open-forest/: tb.fsh  tb.vsh
data/static/tmp/: ogre  ogre.yaml
data/tmp/: test.yaml
readme/: build.txt  design.txt  gameobjects.txt  gameplay.txt  libs.txt  screenshots.markdown
readme/development/: Game.txt  design.txt  gameplay.txt  gui.txt  ideas.txt  invariants.txt  libs.txt  libvpx.txt  links.txt  objects.txt  old.txt  readme.txt  todo.cpp  xml.txt
readme/development/Forest/: iterations.txt
readme/development/Run/: iterations.txt
source/: BATB.cpp  BATB.hpp  Env.cpp  Env.hpp  File.cpp  File.hpp  Game.hpp  Linear.hpp  Module.cpp  Module.hpp  batb.cpp  batb.hpp  debug.hpp  definitions.hpp  definitions.hpp.in  env.cpp  env.hpp  file.cpp  file.hpp  game.hpp  helpers.hpp  include.hpp  main.cpp  nanovg.cpp  nanovg.hpp  tmp_gl.cpp  tmp_gl.hpp
source/BATB/: AL.cpp  AL.hpp  BATB_include.hpp  Config.hpp  CourseDrawer.cpp  CourseDrawer.hpp  Demo.cpp  Demo.hpp  Event.hpp  Forest.cpp  Forest.hpp  GL.cpp  GL.hpp  GUI.cpp  GUI.hpp  Keys.cpp  Keys.hpp  Log.cpp  Log.hpp  LogIndent.hpp  ModuleBATB.hpp  OGRE.cpp  OGRE.hpp  Player.cpp  Player.hpp  Race.hpp  Resource.hpp  Run.cpp  Run.hpp  Scene.hpp  Screen.cpp  Screen.hpp  Shape.hpp  ThreadGLContext.hpp  Time.cpp  Time.hpp  Value.cpp  Value.hpp  Values.cpp  Values.hpp  (+5 more)
source/BATB/Demo/: .swo  .swp  BeginEvents.cpp  BeginEvents.hpp  Course.cpp  Course.hpp  CourseCurve.cpp  CourseCurve.hpp  DemoMapDrawer.cpp  DemoMapDrawer.hpp  DemoMapViewer.cpp  DemoMapViewer.hpp  Iteration.hpp  KeySet.cpp  KeySet.hpp  LoadWorld.cpp  LoadWorld.hpp  Output.cpp  Output.hpp  World.cpp  World.hpp  other.cpp  other.hpp  workers.cpp  workers.hpp
source/BATB/Event/: EventBase.hpp  EventEater.hpp  EventList.hpp
source/BATB/Forest/: Aim.hpp  AimControllable.hpp  AimKeysController.cpp  AimKeysController.hpp  BeginEvents.cpp  BeginEvents.hpp  Camera.hpp  Control.cpp  Control.hpp  Course.hpp  DTMovable.hpp  ForestData.cpp  ForestData.hpp  ForestEvent.hpp  ForestKeys.cpp  ForestKeys.hpp  ForestPrim.cpp  ForestPrim.hpp  ForestSettings.hpp  ForestWorld.hpp  Iteration.hpp  KeySet.cpp  KeySet.hpp  LoadWorld.cpp  LoadWorld.hpp  Map.hpp  MapDrawer2D.cpp  MapDrawer2D.hpp  MapViewer.cpp  MapViewer.hpp  MapViewerKeysController.cpp  MapViewerKeysController.hpp  ModifyCamera.cpp  ModifyCamera.hpp  ModifyControlCamera.cpp  ModifyControlCamera.hpp  ModifyControlRunner.cpp  ModifyControlRunner.hpp  ModifyRunner.cpp  ModifyRunner.hpp  (+19 more)
source/BATB/GUI/: tb_system_batb.cpp  tb_system_batb.hpp
source/BATB/Keys/: Code.hpp  Key.cpp  Key.hpp  KeyAlpha.cpp  KeyAlpha.hpp  KeyButton.cpp  KeyButton.hpp  KeyClicker.cpp  KeyClicker.hpp  KeyKeyboardButton.cpp  KeyKeyboardButton.hpp  KeyMouse.hpp  KeyMouseAxis.cpp  KeyMouseAxis.hpp  KeyMouseButton.cpp  KeyMouseButton.hpp  KeyMouseScroll.cpp  KeyMouseScroll.hpp  KeyPointer.cpp  KeyPointer.hpp  KeySet.cpp  KeySet.hpp  KeysMouseAbstraction.hpp  helpers.cpp  helpers.hpp
source/BATB/OGRE/: GLContextGLFW.cpp  GLContextGLFW.hpp  SGTechniqueResolverListener.cpp  SGTechniqueResolverListener.hpp  helpers.hpp
source/BATB/Race/: RaceClass.hpp  RaceClassEntry.hpp  RacePunch.hpp  RaceWorld.hpp
source/BATB/Run/: BeginEvents.cpp  BeginEvents.hpp  Console.cpp  Console.hpp  Iteration.hpp  KeySet.cpp  KeySet.hpp  Notifier.cpp  Notifier.hpp  Notify.cpp  Notify.hpp  Prim.hpp  RunData.cpp  RunData.hpp  RunEvent.hpp  RunKeys.cpp  RunKeys.hpp  RunPrim.cpp  RunPrim.hpp  RunSettings.hpp  RunWorld.hpp  Scene.hpp  World.cpp  World.hpp  events.hpp  workers.cpp  workers.hpp
source/BATB/Value/: BATB.hpp  Forest.hpp  Keys.hpp  Run.hpp  tb.hpp  values.cpp
source/BATB/gui/: tb_system.cpp
source/BATB/old/: calcalt.cpp  client.cpp  client.h  common.cpp  control.cpp  control.h  course.cpp  dlgCommon.cpp  dlgJoin2.cpp  dlgMap.cpp  dlgMenu.cpp  dlgOptions.cpp  dlgPlayers.cpp  dlgResult.cpp  dlgStack.cpp  dlgTerrain.cpp  forest.h  forest.hpp  mainWindow.cpp  mainWindow.hpp  mapproxy.h  mapproxy.hpp  mesh.cpp  mesh.h  mesh.hpp  observer.h  old.cpp  (+14 more)
source/Env/: Config.hpp  Env_include.hpp  Init.hpp  Screen.cpp  Screen.hpp  Tick.hpp  include.hpp
source/GL/: GLHelpers.hpp
source/Game/: Do.hpp  GameInclude.hpp  Iteration.hpp  IterationStack.hpp  Output.hpp  Ref.hpp  Step.hpp  Think.hpp  game_include.hpp
source/Linear/: Linear_include.hpp  Mat4.hpp
source/batb/: BATB.cpp  BATB.hpp  CourseDrawer.cpp  CourseDrawer.hpp  Event.cpp  Event.hpp  GUI.hpp  Keys.cpp  Log.cpp  Log.hpp  ModuleBATB.hpp  Scene.hpp  Shape.hpp  ThreadGLContext.cpp  ThreadGLContext.hpp  al.hpp  batb_include.hpp  demo.hpp  event.hpp  forest.cpp  forest.hpp  gl.cpp  gl.hpp  glm.hpp  gui.hpp  keys.hpp  log.hpp  ogre.hpp  old.hpp  race.hpp  run.hpp  tb.cpp  tb.hpp  value.hpp  values.hpp  xml.hpp
source/debug/: gl.hpp
source/env/: Env.cpp  Env.hpp  Env_include.hpp  Sound.hpp  env_include.hpp  frame.cpp  frame.hpp  screen.cpp  screen.hpp  sound.hpp  tick.hpp
source/game/: GameInclude.hpp  Iteration.hpp  IterationStack.hpp  Output.hpp  Ref.hpp  Step.hpp  StepDT.hpp  game_include.hpp  iterate.hpp
source/glvpx/: glvpx.cpp  glvpx.hpp
source/helpers/: bezier.hpp  follow_value.hpp  glfw.cpp  glfw.hpp  helpers_gl.hpp  helpers_tinyxml2.cpp  helpers_tinyxml2.hpp  tb.hpp  timed_value.hpp  yaml.hpp
source/test/: compile_Game  leak-check_Game  test_Game.cpp
tmp/: Module.cpp  Module.hpp  header.cpp  header.hpp  header.txt
(+389 files in other folders)
